--- a/app/src/main/res/layout/item_row_fila.xml
+++ b/app/src/main/res/layout/item_row_fila.xml
@@ -9,12 +9,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground">
 
         <TextView
-            android:id="@+id/msg"
+            android:id="@+id/autor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -22,7 +22,7 @@
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/voce"
+            android:id="@+id/msg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
